--- a/WinApp/ex4/ex4.csproj
+++ b/WinApp/ex4/ex4.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8029CB18-750B-45CA-A0D0-28D272044B77}</ProjectGuid>
+    <ProjectGuid>{CA134E79-5315-4B35-9424-889C16DCF898}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ex2</RootNamespace>
-    <AssemblyName>ex2</AssemblyName>
+    <RootNamespace>ex4</RootNamespace>
+    <AssemblyName>ex4</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,8 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,18 +46,57 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCumprimentos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCumprimentos.Designer.cs">
+      <DependentUpon>frmCumprimentos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmFahrenheit.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmFahrenheit.Designer.cs">
       <DependentUpon>FrmFahrenheit.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNomeEmail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNomeEmail.Designer.cs">
+      <DependentUpon>frmNomeEmail.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmNotaFinal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNotaFinal.Designer.cs">
+      <DependentUpon>frmNotaFinal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPrincipal.Designer.cs">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCumprimentos.resx">
+      <DependentUpon>frmCumprimentos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmFahrenheit.resx">
       <DependentUpon>FrmFahrenheit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNomeEmail.resx">
+      <DependentUpon>frmNomeEmail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNotaFinal.resx">
+      <DependentUpon>frmNotaFinal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPrincipal.resx">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
