--- a/WinApp/ex4/ex4.csproj
+++ b/WinApp/ex4/ex4.csproj
@@ -83,6 +83,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="frmHoras.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHoras.Designer.cs">
+      <DependentUpon>frmHoras.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmCumprimentos.resx">
       <DependentUpon>frmCumprimentos.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +113,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmHoras.resx">
+      <DependentUpon>frmHoras.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
