fim do dia 28/2

--- a/WinApp/ex4/App.config
+++ b/WinApp/ex4/App.config
@@ -22,6 +22,18 @@
             <setting name="resposta" serializeAs="String">
                 <value>A nota final é: </value>
             </setting>
+            <setting name="dollar" serializeAs="String">
+                <value>0.88</value>
+            </setting>
+            <setting name="libra" serializeAs="String">
+                <value>1.17</value>
+            </setting>
+            <setting name="lene" serializeAs="String">
+                <value>0.08</value>
+            </setting>
+            <setting name="sek" serializeAs="String">
+                <value>0.095</value>
+            </setting>
         </ex4.Properties.Settings>
     </applicationSettings>
 </configuration>
