--- a/WinApp/ex4/Properties/Settings.settings
+++ b/WinApp/ex4/Properties/Settings.settings
@@ -14,5 +14,17 @@
     <Setting Name="resposta" Type="System.String" Scope="Application">
       <Value Profile="(Default)">A nota final é: </Value>
     </Setting>
+    <Setting Name="dollar" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">0.88</Value>
+    </Setting>
+    <Setting Name="libra" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">1.17</Value>
+    </Setting>
+    <Setting Name="lene" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">0.08</Value>
+    </Setting>
+    <Setting Name="sek" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">0.095</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
