--- a/WinApp/ex4/ex4.csproj
+++ b/WinApp/ex4/ex4.csproj
@@ -51,6 +51,24 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCambioCheckbox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCambioCheckbox.Designer.cs">
+      <DependentUpon>frmCambioCheckbox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCambioDropdown.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCambioDropdown.Designer.cs">
+      <DependentUpon>frmCambioDropdown.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCambioRadioButton.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCambioRadioButton.Designer.cs">
+      <DependentUpon>frmCambioRadioButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCumprimentos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +99,12 @@
     <Compile Include="frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmQuantoTempoPassou.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQuantoTempoPassou.Designer.cs">
+      <DependentUpon>frmQuantoTempoPassou.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="frmHoras.cs">
@@ -89,6 +113,15 @@
     <Compile Include="frmHoras.Designer.cs">
       <DependentUpon>frmHoras.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmCambioCheckbox.resx">
+      <DependentUpon>frmCambioCheckbox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCambioDropdown.resx">
+      <DependentUpon>frmCambioDropdown.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCambioRadioButton.resx">
+      <DependentUpon>frmCambioRadioButton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCumprimentos.resx">
       <DependentUpon>frmCumprimentos.cs</DependentUpon>
     </EmbeddedResource>
@@ -103,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQuantoTempoPassou.resx">
+      <DependentUpon>frmQuantoTempoPassou.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
