--- a/WinApp/TesteClasses_Forms/TesteClasses_Forms.csproj
+++ b/WinApp/TesteClasses_Forms/TesteClasses_Forms.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="escolhaAutor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="escolhaAutor.Designer.cs">
+      <DependentUpon>escolhaAutor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="escolhaAutor.resx">
+      <DependentUpon>escolhaAutor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
