--- a/WinApp/TesteClasses_Forms/TesteClasses_Forms.csproj
+++ b/WinApp/TesteClasses_Forms/TesteClasses_Forms.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL.cs" />
     <Compile Include="escolhaAutor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TesteBase de dados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TesteBase de dados.Designer.cs">
+      <DependentUpon>TesteBase de dados.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="escolhaAutor.resx">
       <DependentUpon>escolhaAutor.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TesteBase de dados.resx">
+      <DependentUpon>TesteBase de dados.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\DataSources\FormTeste.datasource" />
     <None Include="Properties\DataSources\MinhasClasses.Autor.datasource" />
     <None Include="Properties\DataSources\MinhasClasses.Editora.datasource" />
@@ -97,6 +107,11 @@
       <Project>{77f404ef-b1d4-4ea9-9185-e7ada68e0bc4}</Project>
       <Name>MinhasClasses</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="BaseDados\DBTeste.mdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
