--- a/TestePratico1/WindowsFormsApplication/WindowsFormsApplication.csproj
+++ b/TestePratico1/WindowsFormsApplication/WindowsFormsApplication.csproj
@@ -51,6 +51,12 @@
     <Compile Include="AcessoADados\frmListarEncomendasClientes.Designer.cs">
       <DependentUpon>frmListarEncomendasClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="AcessoADados\PopUpEncomenda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AcessoADados\PopUpEncomenda.Designer.cs">
+      <DependentUpon>PopUpEncomenda.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AcessoADados\frmListarEncomendasClientes.resx">
       <DependentUpon>frmListarEncomendasClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AcessoADados\PopUpEncomenda.resx">
+      <DependentUpon>PopUpEncomenda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
@@ -96,7 +105,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj">
+      <Project>{cdd006dd-199d-45f7-837c-e61cfcc37fdc}</Project>
+      <Name>ClassLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
